--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -77,7 +77,7 @@
                 <br />
               </ion-item>
                 <ion-item lines="none">
-                  <p>For inquiries please contact Chong Hua Hospital It Department (<b><a href="tel: +63322558000">+63 32 255 8000</a></b>)</p>
+                  <p>For inquiries, please contact Chong Hua Hospital IT Department (<b><a href="tel: +63322558000">+63 32 255 8000</a></b>)</p>
                 </ion-item>
 
             </ion-list>
