--- a/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
+++ b/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
@@ -31,8 +31,8 @@
       <ion-item class="ion-no-padding">
         <ion-label position="floating">Location</ion-label>
         <ion-select  [(ngModel)]="location" value = 'M' okText="Ok" cancelText="Cancel" (ionChange)="pickLocation()">
-        <ion-select-option value = "C">Chong Hua Hospital</ion-select-option>
-        <ion-select-option value = "M">Chong Hua Hospital Mandaue</ion-select-option>
+        <ion-select-option value = "C" class="ion-text-wrap" >Chong Hua Hospital</ion-select-option>
+        <ion-select-option value = "M" class="ion-text-wrap" >Chong Hua Hospital Mandaue</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-card-content>
