--- a/src/app/components/fee/fee.page.html
+++ b/src/app/components/fee/fee.page.html
@@ -15,7 +15,7 @@
 
 <ion-item>
   <ion-label position="fixed">Remarks</ion-label>
-  <ion-input  type="text" id="input-remarks" value="{{remarks}}"></ion-input>
+  <ion-textarea  type="text" id="input-remarks" value="{{remarks}}"></ion-textarea>
 </ion-item>
 
 
