--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -17,7 +17,7 @@
   <ion-grid class="ion-no-padding" >
     <ion-row >
       <ion-col size-md="8" offset-md="2" size-lg="6" offset-lg="3" class="custom-border-bottom ion-no-border ">
-        <ion-item lines="none"><h2 class="ion-no-padding">Welcome, Doc {{first_name}}</h2></ion-item>
+        <ion-item lines="none"><h2 class="ion-no-padding">Welcome, Dr. {{first_name}}</h2></ion-item>
         
  
   <ion-grid>
@@ -51,6 +51,7 @@
   </ion-grid>
 
   <div id="lineChartForMonth" ></div>
+  <ion-item ></ion-item>
   <div id="lineChartForYear" ></div>
 
 
