--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -18,7 +18,7 @@
             </ion-item>
             <div class="ion-margin-vertical ion-text-right">
               <ion-button expand="block" shape="round" id="btn-confirm" (click)="loginAction() " color="mango">
-              Login
+              LOGIN
               </ion-button>
             </div>
           </ion-card-content>
