--- a/src/app/components/hospital-selector-with-all/hospital-selector-with-all.component.html
+++ b/src/app/components/hospital-selector-with-all/hospital-selector-with-all.component.html
@@ -6,7 +6,7 @@
   <ion-segment-button value="chhm" (click)="onSubmit('M')" >Mandaue City</ion-segment-button>
 </ion-segment-->
 
-<div class="navbar" class="ion-text-center chh-bg" >
+<div class="navbar" class="ion-text-center  chh-darkmode" >
   <ion-button fill="clear" (click)="onSubmit('A',active3)" 
   [ngClass]="{'active-link':active3, 'notactive':!active3}" 
     class="link" size="small">
