Updated the css global and variabl

--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -50,7 +50,7 @@
     </ion-row>
   </ion-grid>
 
-  <div id="lineChartForMonth" style="background-color:rgba(255, 255, 255,0);"></div>
+  <div id="lineChartForMonth" ></div>
   <ion-item ></ion-item>
   <div id="lineChartForYear" ></div>
 
