--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --background-color: #ffffff;
+	--text-color: #292b2c;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -103,19 +105,12 @@
     --ion-color-mangolight-contrast-rgb: 0,0,0;
     --ion-color-mangolight-shade: #275228;
     --ion-color-mangolight-tint: #275228;
-    .link {
-      --color: #528d53;
-    }
-   
-    .active-link {
-      --color: #275228;
-      border-bottom: 2px solid #275228;
-      font-weight: bold;
-    }
-   
+
 
 }
-
+.chh-darkmode{
+  background-color: #ffffff;
+}
 // @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
@@ -123,6 +118,8 @@
    */
 
   body[color-theme="dark"] {
+    --background-color: #000000;
+    
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -185,38 +182,19 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
-    --text-color: #c0c0c0;
-    --background-color: #1F2227;
+      background-color: #1F2227;
     --text-color: #c0c0c0;
     --hilight-color: #8db4d6;
-    :root {
-      --background-color: #1F2227;
-      --text-color: #c0c0c0;
-      --hilight-color: #8db4d6;
+
+
+    .highcharts-color-0 {
+        fill: #0460ba;
+        stroke: #0460ba;
     }
-  
-  /* Some data colors. Light mode uses defaults */
-  .highcharts-color-0 {
-      fill: #0460ba;
-      stroke: #0460ba;
-  }
-  .highcharts-color-1 {
-      fill: #9696ab;
-      stroke: #9696ab;
-  }
-  .chh-darkmode {
-    background-color: #1F2227;
-    --text-color: #c0c0c0 !important;
-   }
-   .link {
-    --color: #c0c0c0;
-  }
-  .active-link {
-    background-color: #1F2227;
-    --text-color: #c0c0c0 !important;
-    border-bottom: 2px solid #c0c0c0;
-    font-weight: bold;
-  }
+    .highcharts-color-1 {
+        fill: #9696ab;
+        stroke: #9696ab;
+    }
   }
 
   /*
@@ -225,7 +203,7 @@
    */
 
   .ios body[color-theme="dark"] {
-    --ion-background-color: #121212;
+    --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
@@ -299,6 +277,7 @@
 
     --ion-tab-bar-background: #1f1f1f;
   }
+
 // }
 
 .center{
