--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -90,6 +90,7 @@
                   <ion-toggle
                     color="mango"
                     disabled="false"
+                    checked = "{{darkmode}}"
                     (ionChange)="onDarkModeEnable($event)"
                   ></ion-toggle>
                 </ion-item>
