--- a/src/app/components/fee/fee.page.html
+++ b/src/app/components/fee/fee.page.html
@@ -23,7 +23,7 @@
 
 <ion-item>
   <ion-label position="fixed">Remarks</ion-label>
-  <ion-textarea  type="text" id="input-remarks" value="{{remarks}}"></ion-textarea>
+  <ion-textarea  type="text" id="input-remarks" value="{{remarks}}" maxlength="50"></ion-textarea>
 </ion-item>
 
 
