update appointments header

--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -183,7 +183,7 @@
       <ion-item style="padding-top: 10px;" lines="none">
         <div class="ion-text-wrap">
           <ion-text style="padding-top: 15px;">Amount : {{professionalFee}}<br /></ion-text>
-          <ion-text>Remarks : {{remarks}}</ion-text>
+          <ion-text class="ion-text-wrap " >Remarks : {{remarks}}</ion-text>
         </div>
       </ion-item>
       <ion-item lines="none"> 
