updated the dark mode

--- a/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
+++ b/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
@@ -32,10 +32,10 @@
     <ion-card-content>
       
       <ion-item class="ion-no-padding">
-        <ion-label position="floating">Location</ion-label>
+        <ion-label position="floating">Chong Hua Hospital</ion-label>
         <ion-select  [(ngModel)]="location"  okText="Ok" cancelText="Cancel" (ionChange)="pickLocation()">
-        <ion-select-option value = "C" class="ion-text-wrap" >Chong Hua Hospital</ion-select-option>
-        <ion-select-option value = "M" class="ion-text-wrap" >Chong Hua Hospital Mandaue</ion-select-option>
+        <ion-select-option value = "C" class="ion-text-wrap" >Cebu</ion-select-option>
+        <ion-select-option value = "M" class="ion-text-wrap" >Mandaue</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-card-content>
