Temporarily remove lottie player component.

--- a/src/app/components/slider/slider.page.scss
+++ b/src/app/components/slider/slider.page.scss
@@ -1,7 +1,7 @@
-#onboardingslide1 {
-    //width: 30%;
-    margin: 0 auto;
-}
+// #onboardingslide1 {
+//     //width: 30%;
+//     margin: 0 auto;
+// }
 
 ion-slide {
     padding: 5%;
@@ -23,7 +23,7 @@ ion-slides {
 }
 
 .swiper-pagination {
-    bottom: 3px !important;    
+    top: 3px !important;    
 }
 
 /* didn't work
