--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -39,3 +39,12 @@ ion-fab-button[data-desc]::after {
   color: white;
   box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2), 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12);
 }
+
+/* Custom Skeleton Line Height and Margin */
+.custom-skeleton ion-skeleton-text {
+  line-height: 15px;
+}
+
+.custom-skeleton ion-skeleton-text:last-child {
+  margin-bottom: 10px;
+}
