--- a/src/app/components/slider/slider.page.scss
+++ b/src/app/components/slider/slider.page.scss
@@ -20,21 +20,13 @@ ion-slide {
 ion-slides {
     /*--bullet-background: green;*/
     --bullet-background-active: #009444;
+    
+//     .swiper-pagination {
+//     bottom: 66% !important;
+//  }
 }
 
-.swiper-pagination {
-    top: 3px !important;    
-}
+// .swiper-pagination {
+//     top: 3px !important;    
+// }
 
-/* didn't work
-.swiper-pagination-bullet {
-  background: green;
-  opacity: 0.2;
-}
-
-.swiper-pagination-bullet-active {
-  opacity: 0.9;
-  background: green;
-} */
-
-/* add end */
