--- a/src/app/components/slider/slider.page.html
+++ b/src/app/components/slider/slider.page.html
@@ -1,9 +1,9 @@
-<ion-slides pager>
+<ion-slides pager >
   <ion-slide>
     <app-logo></app-logo>
     <h1><b>Welcome aboard, Doc!</b></h1> 
     <div align="center">
-      <!-- <lottie-player
+      <lottie-player
         src="assets/animations/21474-medical-frontliners.json"
         mode="bounce"
         background="transparent"
@@ -11,7 +11,7 @@
         style="width: 300px;"
         loop
         autoplay
-      ></lottie-player> -->
+      ></lottie-player>
     </div>
     <h3>
       We <b>thank you</b> for your courage and service. We truly appreciate it!
