Use gif instead of lottie json.

--- a/src/app/components/slider/slider.page.html
+++ b/src/app/components/slider/slider.page.html
@@ -3,7 +3,8 @@
     <app-logo></app-logo>
     <h1><b>Welcome aboard, Doc!</b></h1> 
     <div align="center">
-      <lottie-player
+      <img src="assets/animations/21474-medical-frontliners.gif" />
+      <!-- <lottie-player
         src="assets/animations/21474-medical-frontliners.json"
         mode="bounce"
         background="transparent"
@@ -11,7 +12,7 @@
         style="width: 300px;"
         loop
         autoplay
-      ></lottie-player>
+      ></lottie-player> -->
     </div>
     <h3>
       We <b>thank you</b> for your courage and service. We truly appreciate it!
@@ -21,6 +22,7 @@
   <ion-slide>
     <h1>View your admitted patients.</h1>
     <div align="center">
+      
       <!-- <lottie-player
         src="assets/animations/18646-medic-clinic-chh-branding.json"
         mode="bounce"
