Fix lotter-player not identified as custom element.

--- a/src/app/components/slider/slider.page.html
+++ b/src/app/components/slider/slider.page.html
@@ -1,9 +1,9 @@
-<ion-slides pager >
+<ion-slides pager>
   <ion-slide>
     <app-logo></app-logo>
-    <h1><b>Welcome aboard, Doc!</b></h1> 
+    <h1><b>Welcome aboard, Doc!</b></h1>
     <div align="center">
-      <img src="assets/animations/21474-medical-frontliners.gif" />
+      <!-- <img src="assets/animations/21474-medical-frontliners.gif" /> -->
       <!-- <lottie-player
         src="assets/animations/21474-medical-frontliners.json"
         mode="bounce"
@@ -22,7 +22,6 @@
   <ion-slide>
     <h1>View your admitted patients.</h1>
     <div align="center">
-      
       <!-- <lottie-player
         src="assets/animations/18646-medic-clinic-chh-branding.json"
         mode="bounce"
@@ -42,7 +41,7 @@
     <h1>View patient appointments.</h1>
     <div align="center">
       <!-- <lottie-player
-        src="assets/animations/11013-animation-feed-chh-branding.json" 
+        src="assets/animations/11013-animation-feed-chh-branding.json"
         mode="bounce"
         background="transparent"
         speed="1"
