--- a/src/global.scss
+++ b/src/global.scss
@@ -260,3 +260,7 @@ body {
 .alert-radio-label.sc-ion-alert-ios {
   white-space: pre-line !important;
 }
+
+.swiper-pagination {
+  bottom: 95% !important;
+}
