Revert back to a much more lighter highchart column color.

--- a/src/global.scss
+++ b/src/global.scss
@@ -219,14 +219,14 @@ ion-toolbar{
         font: var(--text-color);
 
     }
-    .highcharts-color-0 {
-        fill: #0460ba;
-        stroke: #0460ba;
-    }
-    .highcharts-color-1 {
-        fill: #9696ab;
-        stroke: #9696ab;
-    }
+    // .highcharts-color-0 {
+    //     fill: #0460ba;
+    //     stroke: #0460ba;
+    // }
+    // .highcharts-color-1 {
+    //     fill: #9696ab;
+    //     stroke: #9696ab;
+    // }
 }
 
 body {
