--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -47,3 +47,12 @@
 .linesBelow{
   border-bottom: 3px solid  rgba(0, 0, 0,0.3);
 }
+
+/* Custom Skeleton Line Height and Margin */
+.custom-skeleton ion-skeleton-text {
+  line-height: 10px;
+}
+
+.custom-skeleton ion-skeleton-text:last-child {
+  margin-bottom: 10px;
+}
