Fix CSS for highcharts and shared across the app except tab bottom buttons.

--- a/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
+++ b/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
@@ -2,7 +2,7 @@
 <ion-header mode="md" class="ion-no-border">
   <ion-toolbar class="in-toolbar ios toolbar-title-default hydrated" color="mango">
     <ion-title>
-      <ion-icon name="man-outline"></ion-icon>Add Appointments
+      <ion-icon name="add"></ion-icon>Add Appointments
     </ion-title>
     <!--ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
       <ion-button (click)="closeModal()" routerDirection="back" class="ios button button-clear ion-activatable ion-focusable hydrated">Close</ion-button>
