--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -59,7 +59,7 @@
     </ion-toolbar>
   </ion-header>
  
-  <ion-router-outlet class=""></ion-router-outlet>
+  <ion-router-outlet></ion-router-outlet> -->
  
   <div class="footer">
     <span>Chong Hua Hospital</span>
