--- a/src/app/page/index/index.page.html
+++ b/src/app/page/index/index.page.html
@@ -7,7 +7,6 @@
             <app-logo></app-logo>
             <h1><b>Welcome aboard, Doc!</b></h1>
             <div align="center">
-              <!-- <img src="assets/animations/21474-medical-frontliners.gif" /> -->
               <lottie-player
                 src="assets/animations/21474-medical-frontliners.json"
                 mode="bounce"
@@ -66,7 +65,7 @@
             <div align="center">
               <lottie-player
                 src="assets/animations/4774-done-chh-branding.json"
-                mode="normal"
+                mode="bounce"
                 background="transparent"
                 speed="1"
                 style="width: 300px; height: 300px;"
