--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,7 @@
 /** Ionic CSS Variables **/
 :root {
   --background-color: #ffffff;
-	--text-color: #292b2c;
+  --text-color: #292b2c;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -14,7 +14,7 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** Use Google Web Font - Inter **/
-  --ion-font-family: 'Inter', sans-serif;
+  --ion-font-family: "Inter", sans-serif;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
@@ -80,208 +80,201 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
-
   --ion-color-mango: #275228;
-  --ion-color-mango-rgb: 255,204,102;
+  --ion-color-mango-rgb: 255, 204, 102;
   --ion-color-mango-contrast: #ffffff;
-  --ion-color-mango-contrast-rgb: 0,0,0;
+  --ion-color-mango-contrast-rgb: 0, 0, 0;
   --ion-color-mango-shade: #009444;
   --ion-color-mango-tint: #275228;
-  
 
-  --ion-color-chh-css-primary2: #E0BA5B;
-
+  --ion-color-chh-css-primary2: #e0ba5b;
 
   ion-tab-button.tab-selected {
-    ion-icon, ion-label {
-    color: var(--ion-color-mango) !important;
-    --ion-color-base: var(--ion-color-mango) !important;
+    ion-icon,
+    ion-label {
+      color: var(--ion-color-mango) !important;
+      --ion-color-base: var(--ion-color-mango) !important;
     }
-    }
+  }
 
-    --ion-color-mangolight: #1183487e;
-    --ion-color-mangolight-rgb: 255,204,102;
-    --ion-color-mangolight-contrast: #ffffff;
-    --ion-color-mangolight-contrast-rgb: 0,0,0;
-    --ion-color-mangolight-shade: #275228;
-    --ion-color-mangolight-tint: #275228;
-
-
+  --ion-color-mangolight: #1183487e;
+  --ion-color-mangolight-rgb: 255, 204, 102;
+  --ion-color-mangolight-contrast: #ffffff;
+  --ion-color-mangolight-contrast-rgb: 0, 0, 0;
+  --ion-color-mangolight-shade: #275228;
+  --ion-color-mangolight-tint: #275228;
 }
-.chh-darkmode{
+.chh-darkmode {
   background-color: #ffffff;
 }
 // @media (prefers-color-scheme: dark) {
-  /*
+/*
    * Dark Colors
    * -------------------------------------------
    */
 
-  body[color-theme="dark"] {
-    --background-color: #000000;
-    
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+body[color-theme="dark"] {
+  --background-color: #000000;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+  --ion-color-primary: #428cff;
+  --ion-color-primary-rgb: 66, 140, 255;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #3a7be0;
+  --ion-color-primary-tint: #5598ff;
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+  --ion-color-secondary: #50c8ff;
+  --ion-color-secondary-rgb: 80, 200, 255;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255, 255, 255;
+  --ion-color-secondary-shade: #46b0e0;
+  --ion-color-secondary-tint: #62ceff;
 
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
+  --ion-color-tertiary: #6a64ff;
+  --ion-color-tertiary-rgb: 106, 100, 255;
+  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+  --ion-color-tertiary-shade: #5d58e0;
+  --ion-color-tertiary-tint: #7974ff;
 
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
+  --ion-color-success: #2fdf75;
+  --ion-color-success-rgb: 47, 223, 117;
+  --ion-color-success-contrast: #000000;
+  --ion-color-success-contrast-rgb: 0, 0, 0;
+  --ion-color-success-shade: #29c467;
+  --ion-color-success-tint: #44e283;
 
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
+  --ion-color-warning: #ffd534;
+  --ion-color-warning-rgb: 255, 213, 52;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0, 0, 0;
+  --ion-color-warning-shade: #e0bb2e;
+  --ion-color-warning-tint: #ffd948;
 
-    --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
-    --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
+  --ion-color-danger: #ff4961;
+  --ion-color-danger-rgb: 255, 73, 97;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255, 255, 255;
+  --ion-color-danger-shade: #e04055;
+  --ion-color-danger-tint: #ff5b71;
 
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
+  --ion-color-dark: #f4f5f8;
+  --ion-color-dark-rgb: 244, 245, 248;
+  --ion-color-dark-contrast: #000000;
+  --ion-color-dark-contrast-rgb: 0, 0, 0;
+  --ion-color-dark-shade: #d7d8da;
+  --ion-color-dark-tint: #f5f6f9;
 
-    --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
-    --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
-    --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
-      background-color: #1F2227;
-    --text-color: #c0c0c0;
-    --hilight-color: #8db4d6;
+  --ion-color-medium: #989aa2;
+  --ion-color-medium-rgb: 152, 154, 162;
+  --ion-color-medium-contrast: #000000;
+  --ion-color-medium-contrast-rgb: 0, 0, 0;
+  --ion-color-medium-shade: #86888f;
+  --ion-color-medium-tint: #a2a4ab;
 
+  --ion-color-light: #222428;
+  --ion-color-light-rgb: 34, 36, 40;
+  --ion-color-light-contrast: #ffffff;
+  --ion-color-light-contrast-rgb: 255, 255, 255;
+  --ion-color-light-shade: #1e2023;
+  --ion-color-light-tint: #383a3e;
 
-    .highcharts-color-0 {
-        fill: #0460ba;
-        stroke: #0460ba;
-    }
-    .highcharts-color-1 {
-        fill: #9696ab;
-        stroke: #9696ab;
-    }
+  background-color: #1f2227;
+  --text-color: #c0c0c0;
+  --hilight-color: #8db4d6;
+
+  .highcharts-color-0 {
+    fill: #0460ba;
+    stroke: #0460ba;
   }
+  .highcharts-color-1 {
+    fill: #9696ab;
+    stroke: #9696ab;
+  }
+}
 
-  /*
+/*
    * iOS Dark Theme
    * -------------------------------------------
    */
 
-  .ios body[color-theme="dark"] {
-    --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
+.ios body[color-theme="dark"] {
+  --ion-background-color: #000000;
+  --ion-background-color-rgb: 0, 0, 0;
 
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+  --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255, 255, 255;
 
-    --ion-color-step-50: #0d0d0d;
-    --ion-color-step-100: #1a1a1a;
-    --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
-    --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
+  --ion-color-step-50: #0d0d0d;
+  --ion-color-step-100: #1a1a1a;
+  --ion-color-step-150: #262626;
+  --ion-color-step-200: #333333;
+  --ion-color-step-250: #404040;
+  --ion-color-step-300: #4d4d4d;
+  --ion-color-step-350: #595959;
+  --ion-color-step-400: #666666;
+  --ion-color-step-450: #737373;
+  --ion-color-step-500: #808080;
+  --ion-color-step-550: #8c8c8c;
+  --ion-color-step-600: #999999;
+  --ion-color-step-650: #a6a6a6;
+  --ion-color-step-700: #b3b3b3;
+  --ion-color-step-750: #bfbfbf;
+  --ion-color-step-800: #cccccc;
+  --ion-color-step-850: #d9d9d9;
+  --ion-color-step-900: #e6e6e6;
+  --ion-color-step-950: #f2f2f2;
 
-    --ion-toolbar-background: #0d0d0d;
+  --ion-toolbar-background: #0d0d0d;
 
-    --ion-item-background: #000000;
-  }
+  --ion-item-background: #000000;
+}
 
-
-  /*
+/*
    * Material Design Dark Theme
    * -------------------------------------------
    */
 
-   
+.md body[color-theme="dark"] {
+  --ion-background-color: #121212;
+  --ion-background-color-rgb: 18, 18, 18;
 
-  .md body[color-theme="dark"] {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+  --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255, 255, 255;
 
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+  --ion-border-color: #222222;
 
-    --ion-border-color: #222222;
+  --ion-color-step-50: #1e1e1e;
+  --ion-color-step-100: #2a2a2a;
+  --ion-color-step-150: #363636;
+  --ion-color-step-200: #414141;
+  --ion-color-step-250: #4d4d4d;
+  --ion-color-step-300: #595959;
+  --ion-color-step-350: #656565;
+  --ion-color-step-400: #717171;
+  --ion-color-step-450: #7d7d7d;
+  --ion-color-step-500: #898989;
+  --ion-color-step-550: #949494;
+  --ion-color-step-600: #a0a0a0;
+  --ion-color-step-650: #acacac;
+  --ion-color-step-700: #b8b8b8;
+  --ion-color-step-750: #c4c4c4;
+  --ion-color-step-800: #d0d0d0;
+  --ion-color-step-850: #dbdbdb;
+  --ion-color-step-900: #e7e7e7;
+  --ion-color-step-950: #f3f3f3;
 
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
-    --ion-color-step-150: #363636;
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
-    --ion-color-step-300: #595959;
-    --ion-color-step-350: #656565;
-    --ion-color-step-400: #717171;
-    --ion-color-step-450: #7d7d7d;
-    --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
-    --ion-color-step-650: #acacac;
-    --ion-color-step-700: #b8b8b8;
-    --ion-color-step-750: #c4c4c4;
-    --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
-    --ion-color-step-900: #e7e7e7;
-    --ion-color-step-950: #f3f3f3;
+  --ion-item-background: #1e1e1e;
 
-    --ion-item-background: #1e1e1e;
+  --ion-toolbar-background: #1f1f1f;
 
-    --ion-toolbar-background: #1f1f1f;
-
-    --ion-tab-bar-background: #1f1f1f;
-  }
+  --ion-tab-bar-background: #1f1f1f;
+}
 
 // }
 
-.center{
-  text-align:center;
+.center {
+  text-align: center;
 }
 .ion-color-mango {
   --ion-color-base: var(--ion-color-mango);
@@ -296,8 +289,6 @@
   --ion-color-base: var(--ion-color-chh-css-primary2);
 }
 
-
-
 .ion-color-mangolight {
   --ion-color-base: var(--ion-color-mangolight);
   --ion-color-base-rgb: var(--ion-color-mangolight-rgb);
@@ -306,8 +297,8 @@
   --ion-color-shade: var(--ion-color-mangolight-shade);
   --ion-color-tint: var(--ion-color-mangolight-tint);
 }
-.toolbar-ios, .toolbar-md, .toolbar-wp
-{
-min-height: 20px;
+.toolbar-ios,
+.toolbar-md,
+.toolbar-wp {
+  min-height: 20px;
 }
-
