Explicit CSS class for tab bottom buttons and footer.

--- a/src/global.scss
+++ b/src/global.scss
@@ -46,6 +46,10 @@
  }
 */
 
+.tab-font-family {
+  font-family: "Inter", sans-serif;
+}
+
 .desktop-wrapper {
    ion-toolbar {
      text-align: center;
