--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,71 +1,87 @@
-  <ion-tabs *ngIf="!isDesktop" >
-    <ion-tab-bar slot="bottom" >
-      <ion-tab-button tab="dashboard" >
-        <ion-icon name="stats-chart-outline"></ion-icon>
-        <ion-label>Dashboard</ion-label>
-      </ion-tab-button>
-      <ion-tab-button tab="in-patients" >
-        <ion-icon name="person-circle-outline"></ion-icon>
-        <ion-label>In-Patients</ion-label>
-      </ion-tab-button>
-      <ion-tab-button tab="appointments" >
-        <ion-icon name="calendar-outline"></ion-icon>
-        <ion-label>Appointments</ion-label>
-      </ion-tab-button>
-      <ion-tab-button tab="settings" >
-        <ion-icon name="settings-outline"></ion-icon>
-        <ion-label>Settings</ion-label>
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
+<ion-tabs *ngIf="!isDesktop">
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="dashboard">
+      <ion-icon name="stats-chart-outline"></ion-icon>
+      <ion-label class="tab-font-family">Dashboard</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="in-patients">
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label class="tab-font-family">In-Patients</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="appointments">
+      <ion-icon name="calendar-outline"></ion-icon>
+      <ion-label class="tab-font-family">Appointments</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="settings">
+      <ion-icon name="settings-outline"></ion-icon>
+      <ion-label class="tab-font-family">Settings</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
 
 <div *ngIf="isDesktop" class="desktop">
-
-
-
-  <ion-header mode="md"  class="ion-no-border custom-border-bottom" > 
-    <ion-toolbar >
+  <ion-header mode="md" class="ion-no-border custom-border-bottom">
+    <ion-toolbar>
       <ion-row class="ion-align-items-center">
-
         <ion-col size="2">
-          <app-logo-sm style="padding-left:20px" ></app-logo-sm>
-          
+          <app-logo-sm style="padding-left: 20px;"></app-logo-sm>
         </ion-col>
-        <ion-col size="10" >
+        <ion-col size="10">
           <div class="navbar" class="ion-text-center chh-bg">
-            <ion-button fill="clear" routerLink="/menu/dashboard" routerDirection="root" routerLinkActive="active-link"
-            class="link">
-            Dashboard
-          </ion-button>
-            <ion-button fill="clear" routerLink="/menu/in-patients" routerDirection="root" routerLinkActive="active-link"
-              class="link">
+            <ion-button
+              fill="clear"
+              routerLink="/menu/dashboard"
+              routerDirection="root"
+              routerLinkActive="active-link"
+              class="link"
+            >
+              Dashboard
+            </ion-button>
+            <ion-button
+              fill="clear"
+              routerLink="/menu/in-patients"
+              routerDirection="root"
+              routerLinkActive="active-link"
+              class="link"
+            >
               In-Patients
             </ion-button>
-            <ion-button fill="clear" routerLink="/menu/appointments" routerDirection="root" routerLinkActive="active-link"
-              class="link">
+            <ion-button
+              fill="clear"
+              routerLink="/menu/appointments"
+              routerDirection="root"
+              routerLinkActive="active-link"
+              class="link"
+            >
               Appointments
             </ion-button>
-            <ion-button fill="clear" routerLink="/menu/settings" routerDirection="root" routerLinkActive="active-link"
-              class="link">
+            <ion-button
+              fill="clear"
+              routerLink="/menu/settings"
+              routerDirection="root"
+              routerLinkActive="active-link"
+              class="link"
+            >
               Settings
             </ion-button>
-            <ion-button fill="clear" routerDirection="root" routerLinkActive="active-link"
-            class="link" (click)='logout()'>
-            Log Out
-          </ion-button>
+            <ion-button
+              fill="clear"
+              routerDirection="root"
+              routerLinkActive="active-link"
+              class="link"
+              (click)="logout()"
+            >
+              Log Out
+            </ion-button>
           </div>
         </ion-col>
       </ion-row>
     </ion-toolbar>
   </ion-header>
- 
-  <ion-router-outlet></ion-router-outlet> -->
- 
-  <div class="footer">
+
+  <ion-router-outlet></ion-router-outlet>
+
+  <div class="footer tab-font-family">
     <span>Chong Hua Hospital</span>
   </div>
- 
-
-
-  
 </div>
