Remove skeleton ui for appointments.

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,6 +11,7 @@
       </ion-fab-button>
       <ion-fab-list side="bottom">
         <ion-fab-button
+          class="tab-font-family"
           color="light"
           (click)="onSubmit('ALL',true)"
           data-desc="All"
@@ -18,6 +19,7 @@
           <ion-icon name="person-outline"></ion-icon>
         </ion-fab-button>
         <ion-fab-button
+          class="tab-font-family"
           color="light"
           (click)="onSubmit('AC',true)"
           data-desc="Admitted"
@@ -25,6 +27,7 @@
           <ion-icon name="person-add-outline"></ion-icon>
         </ion-fab-button>
         <ion-fab-button
+          class="tab-font-family"
           color="light"
           (click)="onSubmit('DN',true)"
           data-desc="For Discharge"
