--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -43,76 +43,79 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
-        <ng-container>
-        <div *ngFor="let x of jsonObj5">
-          <div *ngFor="let y of x.data">
-            <ion-card
-              (click)="presentActionSheet(y.appt_id,y.status,y.patientName)"
-              mode="ios"
-            >
-              <ion-item lines="none">
-                <ion-avatar slot="start">
-                  <text-avatar [text]="y.patientName" [color]=""></text-avatar>
-                </ion-avatar>
-                <ion-label style="margin-top: -5px;">
-                  <ion-item class="ion-no-padding">
-                    <h2 class="ion-text-wrap" style="padding-top: 20px;">
-                      {{y.patientName}}
-                    </h2>
-                  </ion-item>
-                  <ion-row class="ion-no-padding" lines="none">
-                    <!-- Default Progressbar with 50 percent -->
+        <!-- <ng-container> -->
+          <div *ngFor="let x of jsonObj5">
+            <div *ngFor="let y of x.data">
+              <ion-card
+                (click)="presentActionSheet(y.appt_id,y.status,y.patientName)"
+                mode="ios"
+              >
+                <ion-item lines="none">
+                  <ion-avatar slot="start">
+                    <text-avatar
+                      [text]="y.patientName"
+                      [color]=""
+                    ></text-avatar>
+                  </ion-avatar>
+                  <ion-label style="margin-top: -5px;">
+                    <ion-item class="ion-no-padding">
+                      <h2 class="ion-text-wrap" style="padding-top: 20px;">
+                        {{y.patientName}}
+                      </h2>
+                    </ion-item>
+                    <ion-row class="ion-no-padding" lines="none">
+                      <!-- Default Progressbar with 50 percent -->
 
-                    <div>
-                      <p>
-                        <ion-icon
-                          name="time-outline"
-                          slot="start"
-                          style="padding-top: 5px !important;"
-                        ></ion-icon>
-                        {{y.time}}
-                      </p>
-                      <ion-badge
-                        color="success"
-                        slot="end"
-                        *ngIf="y.status == 'Complete'"
-                        >Completed</ion-badge
-                      >
-                      <ion-badge
-                        color="primary"
-                        *ngIf="y.status == 'Waiting'"
-                        slot="end"
-                        >{{y.status}}</ion-badge
-                      >
-                      <ion-badge
-                        color="secondary"
-                        *ngIf="y.status == 'Serving'"
-                        slot="end"
-                        >{{y.status}}</ion-badge
-                      >
-                      <ion-badge
-                        color="warning"
-                        *ngIf="y.status == 'Reserved'"
-                        slot="end"
-                        >{{y.status}}</ion-badge
-                      >
-                    </div>
+                      <div>
+                        <p>
+                          <ion-icon
+                            name="time-outline"
+                            slot="start"
+                            style="padding-top: 5px !important;"
+                          ></ion-icon>
+                          {{y.time}}
+                        </p>
+                        <ion-badge
+                          color="success"
+                          slot="end"
+                          *ngIf="y.status == 'Complete'"
+                          >Completed</ion-badge
+                        >
+                        <ion-badge
+                          color="primary"
+                          *ngIf="y.status == 'Waiting'"
+                          slot="end"
+                          >{{y.status}}</ion-badge
+                        >
+                        <ion-badge
+                          color="secondary"
+                          *ngIf="y.status == 'Serving'"
+                          slot="end"
+                          >{{y.status}}</ion-badge
+                        >
+                        <ion-badge
+                          color="warning"
+                          *ngIf="y.status == 'Reserved'"
+                          slot="end"
+                          >{{y.status}}</ion-badge
+                        >
+                      </div>
 
-                    <br />
-                  </ion-row>
-                </ion-label>
-              </ion-item>
-            </ion-card>
+                      <br />
+                    </ion-row>
+                  </ion-label>
+                </ion-item>
+              </ion-card>
+            </div>
           </div>
-        </div>
-      </ng-container>
+        <!-- </ng-container> -->
 
-        <ng-container>
+        <!-- Skeleton  -->
+        <!-- <ng-container>
           <div
             *ngIf="!objecthandler && !isFetchDone else noDataAvailable"
             class="custom-skeleton"
           >
-            <!-- Skeleton  -->
             <ion-card mode="ios">
               <ion-item lines="none">
                 <ion-avatar slot="start">
@@ -276,13 +279,13 @@
               No Data Available
             </ion-list-header>
           </div>
-        </ng-template>
+        </ng-template> -->
 
-        <!-- <div *ngIf="!objecthandler">
+        <div *ngIf="!objecthandler">
           <ion-list-header slot="center" mode="ios">
             No Data Available
           </ion-list-header>
-        </div> -->
+        </div>
       </ion-col>
     </ion-row>
   </ion-grid>
