Add interim app-icon for review.

--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,1 +1,2 @@
-<img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital">
+<!-- <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital"> -->
+<img src="assets/img/dpp-app-logo-6.png" alt="Chong Hua Hospital">
