--- a/src/app/page/index/index.page.html
+++ b/src/app/page/index/index.page.html
@@ -4,7 +4,8 @@
       <ion-col size-lg="6" size-md="6" offset-md="3 " size-sm="6" size="12">
         <ion-slides pager>
           <ion-slide>
-            <app-logo></app-logo>
+            <!-- <app-logo></app-logo> -->
+            <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital">
             <h1><b>Welcome aboard, Doc!</b></h1>
             <div align="center">
               <lottie-player
